<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="calorie_estimator.app.com.calorieestimator.MainActivity">


    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center_horizontal"
        android:padding="0dp"
        android:text="@string/food_calorie_estimator_using_machine_learning"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"
        android:textSize="20dp"
        android:textStyle="normal|bold"
        android:textAllCaps="false"
        tools:layout_width="match_parent"
        tools:ignore="SpUsage"
        android:includeFontPadding="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="visible"
        tools:ignore="UselessParent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCamera"
                style="@style/Widget.Design.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="122dp"
                android:layout_marginTop="52dp"
                android:text="@string/capture_image"/>

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="18dp"
                android:contentDescription="@string/image"
                android:layout_marginLeft="20dp"
                android:visibility="gone"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/submit"
            style="@style/Widget.Design.FloatingActionButton" />

        <TextView
            android:text="@string/janyani"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            android:id="@+id/my_text_id"
            android:layout_weight="0.06" />

    </LinearLayout>
</RelativeLayout>
